# econ-text-discovery

./: .gitignore  README.md  index_utils.py  pyproject.toml  requirements.txt  streamlit_app.py
news_data_example/2026_06_samples/: 2026_06_02_inflasi_ihk_mei_2026_tetap_terjaga.txt  2026_06_02_surplus_neraca_perdagangan_berlanjut.txt  2026_06_04_laporan_keuangan_tahunan_bi_tahun_2025_kembali_raih_opini_wtp.txt  2026_06_05_fesyar_dukung_posisi_strategis_indonesia_di_tatanan_ekonomi.txt  2026_06_08_bank_indonesia_perkuat_transmisi_kebijakan_melalui_publikasi.txt  2026_06_08_cadangan_devisa_mei_2026_tetap_kuat.txt  2026_06_08_uang_primer_adjusted_mei_2026_tumbuh_14_2_yoy.txt  2026_06_09_bi_rate_naik_25_bps_menjadi_5_50.txt  2026_06_10_perkuat_ketahanan_pangan_bi_jaga_stabilitas_harga_dan_daya_beli.txt  2026_06_10_posisi_kewajiban_neto_investasi_internasional_indonesia.txt  2026_06_10_survei_konsumen_mei_2026.txt  2026_06_11_bank_indonesia_dan_people_s_bank_of_china.txt  2026_06_11_survei_penjualan_eceran_mei_2026.txt  2026_06_15_utang_luar_negeri_indonesia_april_2026_tetap_terjaga.txt  2026_06_18_bi_rate-naik_25_bps_menjadi_5_75.txt  2026_06_22_bank_indonesia_luncurkan_4_program_transformasi.txt  2026_06_23_uang_beredar_pada_mei_2026_tumbuh_lebih_tinggi.txt
textbook_data_example/macroecon_summaries/: 01_supply_side_of_macroeconomy.txt  02_unemployment_wages_inequality.txt  03_aggregate_demand_multiplier_model.txt  04_inflation_and_unemployment.txt  05_macroeconomic_policy_inflation_unemployment.txt  06_the_financial_sector.txt  07_macroeconomic_policy_global_economy.txt  (+3 more)
(+10 files in other folders)
