[project]
name = "econ-text-discovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.14.23",
    "llama-index-llms-google-genai>=0.9.5",
    "streamlit>=1.58.0",
]

[tool.uv]
no-build = true
# if needed in case of any errors due to no-build
constraint-dependencies = [
    "cryptography<49"
]

